--- a/notes.html
+++ b/notes.html
@@ -761,6 +761,30 @@
                     <p>He sure does! It's very cute and short and pretty. I really like the cat you unlock at the end who gives you hints about collectables, it's a very nice to have, especially in the position I was in, where at that point where all I was missing was a reward for going back to talk to an NPC after completing their quest, which would have taken me a while to find otherwise. The tonal shift in the middle for that one section is quite interesting, though the difficulty spike for that boss is potentially questionable. Also having the post-game thing be combat focused is an odd choice; this game's combat is probably the weakest aspect, being not especially bad but largely uninteresting.</p>
                 </div>
             </li> 
+            <li class="sortable" id="093">
+                <button class="collapsible">Super Mario Bros. Remastered [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Positive</h2>
+					<h3>October 2025</h3>
+                    <p>It's quite fancy! I'm not super familiar with the original, having only really played the GBA port when I was a kid and having never played the other three games incorporated into this collection, but to the laymen it seems faithful at least. I really appreciate the visual changes made; I was sceptical about the drop shadow, but overall I think it looks really nice, and I like the use of the original sprites with said changes. Reminds me of the 3D Classics releases on 3DS (though maybe less dramatic). Also including all the custom texture and character support is excellent. Oh and customisable difficulty! The original game is quite unforgiving with sending you back to 1-1 all the time, so even just changing that to the start of the world made it so much nicer, especially for The Lost Levels. Even though I'm not the biggest 2D Mario fan I'm extremely happy this exists, and hope is doesn't get nuked any time soon.</p>
+                </div>
+            </li> 
+            <li class="sortable" id="094">
+                <button class="collapsible">Bloodborne [PS4]</button>
+                <div class="collapsible-content">
+                    <h2>Positive</h2>
+					<h3>October 2025</h3>
+                    <p>Very interesting. The map design felt like an interesting mix of Dark Souls' more "pure" Metroidvania and Dark Souls 3's sort of linearly connected zones, with enough of both that it was hard to make a determination either way.<br><br>The health and defence system is quite interesting, but I think not necessarily better. The healing-when-hitting-after-taking-damage is quite cool but lends itself more to exploring than boss fights, as it encourages over committing to attacks which generally get you killed. Also flasks being consumable is kind of just annoying; it mostly just meant that you'd need to stop trying to fight a boss every so often to go and grind for them for a bit. I do like being about to replenish flasks while exploring from having enemies drop them though. Ideally a mix of auto-replenishing when resting and restocking from exploring would be quite cool I think. Oh and also being unable to rest at "bonfires" makes that aforementioned flask grinding slightly more annoying, as you need to go through two loading screens just to respawn enemies. <br><br>I didn't quite get the hang of the gun for parrying (or whatever term would be appropriate) but again, I like it conceptually.</p>
+                </div>
+            </li> 
+            <li class="sortable" id="095">
+                <button class="collapsible">Death Fungeon [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Neutral</h2>
+					<h3>November 2025</h3>
+                    <p>It's an interesting little stealth platformer, until it just all but drop the stealth mechanics for the last third. Which is a shame, because they were interesting. Overall I think the game suffers from two main issues, janky hitboxes on a lot of obstacles and quite unreliable inputs; the vast majority of my deaths were from dropped A presses on wall jumps or from being too close to the edge of a platform. Maybe I'm just spoiled by Celeste.</p>
+                </div>
+            </li> 
         </ol>
     </div>
     <img class="invisible" src="Assets/Gifs/navigation/icon_home.gif">
