--- a/links.html
+++ b/links.html
@@ -11,38 +11,38 @@
   </head>
   <body>
     <div class="nav">
-      <div class="link_button_list">
-          <img id="breadbug"
-              src="Assets/Gifs/Breadbug_Textured.gif" 
-              alt="Digital render of a breadbug spinning">
-          <h1>BUG'S STUFF</h1>
-          <img id="breadbug"
-              src="Assets/Gifs/Breadbug_Textured.gif" 
-              alt="Digital render of a breadbug spinning">
-      </div>
-      <div class="link_button_list">
-          <a class= "link_button" id="icon_home" href="index.html">
-              <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
-              <p class="link_button_text">Home</p>     
-          </a>
-          <a class= "link_button" id="icon_games" href="games.html">
-              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
-              <p class="link_button_text">Games</p>   
-          </a>
-          <a class= "link_button" id="icon_cat" href="cat.html">
-              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
-              <p class="link_button_text">Cat</p>   
-          </a>
-          <a class= "link_button" id="icon_notes" href="notes.html">
-              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-              <p class="link_button_text">Notes</p> 
-          </a>
-          <a class= "link_button" id="icon_links" href="links.html">
-              <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
-              <p class="link_button_text">Links</p> 
-          </a>
-      </div>
-  </div>
+        <div class="link_button_list">
+            <img id="breadbug"
+                src="Assets/Gifs/Breadbug_Textured.gif" 
+                alt="Digital render of a breadbug spinning">
+            <h1>BUG'S STUFF</h1>
+            <img id="breadbug"
+                src="Assets/Gifs/Breadbug_Textured.gif" 
+                alt="Digital render of a breadbug spinning">
+        </div>
+        <div class="link_button_list">
+            <a class= "link_button" id="icon_home" href="index.html">
+                <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
+                <p class="link_button_text">Home</p>     
+            </a>
+            <a class= "link_button" id="icon_notes" href="blog.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Blog">
+                <p class="link_button_text">Blog</p> 
+            </a>
+            <a class= "link_button" id="icon_games" href="games.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
+                <p class="link_button_text">Games</p>   
+            </a>
+            <a class= "link_button" id="icon_cat" href="cat.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
+                <p class="link_button_text">Cat</p>   
+            </a>
+            <a class= "link_button" id="icon_links" href="links.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
+                <p class="link_button_text">Links</p> 
+            </a>
+        </div>
+    </div>
     
     <div class="content">
       <h4>MY STUFF!</h4>
@@ -52,11 +52,9 @@
         <a href="https://generalbug.itch.io/"><img class="link_icon" src="Assets/Logos/logo_itch.png" alt="Itch"></a>
         <a href="https://github.com/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_github.png" alt="GitHub"></a>
         <a href="https://modrinth.com/user/GeneralBug"><img class="link_icon" src="Assets/Logos/logo_modrinth.png" alt="Modrinth"></a><br>
-
       </div>
       <h4>FRIEND'S STUFF!</h4>
       <div class="paragraph left_justified">
-
         <a href="https://rozetta-stone.neocities.org/">Rozetta Stone Emporium</a> - Roze writes stuff
         <br><br>
         <a href="https://emmabond02.wixsite.com/portfolio">Emma's Portfolio</a> - Emma draws stuff
@@ -135,6 +133,7 @@
           <a href="https://isle.pizza/">LEGO Island Web Port</a> - it's a web port of LEGO Island, believe it or notes
           <br><br>
           <a href="https://pkmnclassic.net/">Poké Classic Network</a> - an unofficial continuation of the DS Pokémon game's online servers
+          <br><br>
           Console hacking guides:
           <ul>
             <li><a href="https://3ds.hacks.guide/">3DS</a> (It's pretty easy you know)</li>
