--- a/notes.html
+++ b/notes.html
@@ -25,6 +25,10 @@
                 <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
                 <p class="link_button_text">Home</p>     
             </a>
+            <a class= "link_button" id="icon_notes" href="blog.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Blog">
+                <p class="link_button_text">Blog</p> 
+            </a>
             <a class= "link_button" id="icon_games" href="games.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
                 <p class="link_button_text">Games</p>   
@@ -32,10 +36,6 @@
             <a class= "link_button" id="icon_cat" href="cat.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
                 <p class="link_button_text">Cat</p>   
-            </a>
-            <a class= "link_button" id="icon_notes" href="notes.html">
-                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-                <p class="link_button_text">Notes</p> 
             </a>
             <a class= "link_button" id="icon_links" href="links.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
@@ -783,6 +783,30 @@
                     <h2>Neutral</h2>
 					<h3>November 2025</h3>
                     <p>It's an interesting little stealth platformer, until it just all but drop the stealth mechanics for the last third. Which is a shame, because they were interesting. Overall I think the game suffers from two main issues, janky hitboxes on a lot of obstacles and quite unreliable inputs; the vast majority of my deaths were from dropped A presses on wall jumps or from being too close to the edge of a platform. Maybe I'm just spoiled by Celeste.</p>
+                </div>
+            </li>
+            <li class="sortable" id="096">
+                <button class="collapsible">Wizard Tower [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Positive</h2>
+					<h3>December 2025</h3>
+                    <p>I've played a couple of these sort of incremental games lately, and I quite like them for some reason. This one was quite good I think, though I was compelled to unlock every prestige point after beating it which was the only time it got properly grindy. Not too much to say really. It's just nifty.</p>
+                </div>
+            </li> 
+            <li class="sortable" id="097">
+                <button class="collapsible">Blobun [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Positive</h2>
+					<h3>December 2025</h3>
+                    <p>It's cute! The puzzles felt really well balanced, where the later ones got hard enough to be interesting but not so obtuse to be frustrating. Also the the goo affects and stuff were very nice, and the story was cute. A cute game!</p>
+                </div>
+            </li> 
+            <li class="sortable" id="098">
+                <button class="collapsible">Rental [PC]</button>
+                <div class="collapsible-content">
+                    <h2>Neutral</h2>
+					<h3>January 2026</h3>
+                    <p>It's very cute! I especially like some of the weird art choices, like the key being a weird jpeg on a blocky model rather than a clean model or transparent image. Only issues are the camera is a bit janky and the audio a bit unbalanced.</p>
                 </div>
             </li> 
         </ol>
