--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <img class="link_icon_gif"  src="Assets/Gifs/navigation/icon_home.png" alt="Home">
                 <p class="link_button_text">Home</p>     
             </a>
+            <a class= "link_button" id="icon_notes" href="blog.html">
+                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Blog">
+                <p class="link_button_text">Blog</p> 
+            </a>
             <a class= "link_button" id="icon_games" href="games.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_games.png" alt="Games">
                 <p class="link_button_text">Games</p>   
@@ -32,10 +36,6 @@
             <a class= "link_button" id="icon_cat" href="cat.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_cat.png" alt="Cat">
                 <p class="link_button_text">Cat</p>   
-            </a>
-            <a class= "link_button" id="icon_notes" href="notes.html">
-                <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_notes.png" alt="Notes">
-                <p class="link_button_text">Notes</p> 
             </a>
             <a class= "link_button" id="icon_links" href="links.html">
                 <img class="link_icon_gif" src="Assets/Gifs/navigation/icon_links.png" alt="Links">
@@ -48,8 +48,8 @@
 
         <div class="paragraph">
             <p>
-                Hello, I'm GeneralBug and this is my cool website for my cool stuff. 
-                I'm a game developer from Australia!
+                Hello, I'm GeneralBug/Bug/Emily and this is my cool website for my cool stuff. 
+                I'm a game developer from Australia! Look at my cat:
             </p>
             <img class="screenshot"
                 src="Assets/Belle/belle_10.png" 
@@ -57,7 +57,7 @@
             <p>
                 Site last updated <span id="updatedate"></span>, with <span id="viewcount"></span> unique visitors!
             </p>
-            <a href="https://neocities.org"><img src="Assets/neocities.png" alt="Hosted by Neocites"></a>
+            <a href="https://neocities.org/site/buggus"><img src="Assets/neocities.png" alt="Hosted by Neocites"></a>
         </div>
     </div>
 
